Fix navigation on mobile

--- a/api/css/style.css
+++ b/api/css/style.css
@@ -101,6 +101,12 @@ h4
 	margin-top: 3%;
 }
 
+.top-right-logo-xs
+{
+	width: 10%;
+	margin-right: 5%;
+}
+
 .main-search-bar
 {
 	margin-top: 10%;
